[package]
name = "tio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tot = { git = "https://github.com/totlang/tot-rs.git", branch = "master" }

anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

log = "0.4"
env_logger = "0.10"
